feat:updated the links

--- a/index.html
+++ b/index.html
@@ -184,10 +184,14 @@
           <!-- Desktop Navigation -->
           <div class="hidden md:flex md:items-center md:space-x-8">
             <div class="flex space-x-8">
-              <a href="#" class="nav-link px-3 py-2 text-sm">Home</a>
-              <a href="#" class="nav-link px-3 py-2 text-sm">Services</a>
-              <a href="#" class="nav-link px-3 py-2 text-sm">Blog</a>
-              <a href="#" class="nav-link px-3 py-2 text-sm">Portfolio</a>
+              <a href="index.html" class="nav-link px-3 py-2 text-sm">Home</a>
+              <a href="services.html" class="nav-link px-3 py-2 text-sm"
+                >Services</a
+              >
+              <a href="blog.html" class="nav-link px-3 py-2 text-sm">Blog</a>
+              <a href="portfolio.html" class="nav-link px-3 py-2 text-sm"
+                >Portfolio</a
+              >
 
               <!-- About Dropdown -->
               <div class="relative group">
@@ -212,22 +216,22 @@
                   class="absolute hidden group-hover:block bg-white shadow-lg rounded-md mt-2 py-1 w-48 z-10 border border-gray-100"
                 >
                   <a
-                    href="#"
+                    href="our-story.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-600"
                     >Our Story</a
                   >
                   <a
-                    href="#"
+                    href="team.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-600"
                     >Team</a
                   >
                   <a
-                    href="#"
+                    href="careers.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-600"
                     >Careers</a
                   >
                   <a
-                    href="#"
+                    href="resources.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-600"
                     >Resources</a
                   >
@@ -236,7 +240,7 @@
             </div>
 
             <a
-              href="#"
+              href="contact.html"
               class="ml-8 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-[#0B2C4D] hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 btn-hover-effect"
             >
               Get a Consultation
@@ -278,47 +282,47 @@
           class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white border-t border-gray-100"
         >
           <a
-            href="#"
+            href="index.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Home</a
           >
           <a
-            href="#"
+            href="services.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Services</a
           >
           <a
-            href="#"
+            href="blog.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Blog</a
           >
           <a
-            href="#"
+            href="portfolio.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Portfolio</a
           >
           <a
-            href="#"
+            href="our-story.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Our Story</a
           >
           <a
-            href="#"
+            href="team.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Team</a
           >
           <a
-            href="#"
+            href="careers.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Careers</a
           >
           <a
-            href="#"
+            href="resources.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500 hover:bg-gray-50"
             >Resources</a
           >
           <a
-            href="#"
+            href="contact.html"
             class="block px-3 py-2 rounded-md text-base font-medium text-white bg-[#0B2C4D] hover:bg-blue-700"
             >Get a Consultation</a
           >
@@ -406,7 +410,7 @@
               comprehensive solutions tailored to your unique needs.
             </p>
             <a
-              href="#"
+              href="about.html"
               class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-[#0B2C4D] hover:bg-blue-700 btn-hover-effect"
             >
               Learn More About Us
@@ -587,7 +591,7 @@
               transformation services to keep your business competitive.
             </p>
             <a
-              href="#"
+              href="it-consulting.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -637,7 +641,7 @@
               negotiation, ensuring cost efficiency and quality.
             </p>
             <a
-              href="#"
+              href="procument-solutions.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -687,7 +691,7 @@
               partners, investments, and business opportunities.
             </p>
             <a
-              href="#"
+              href="business-vetting.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -737,7 +741,7 @@
               cost-effectiveness in today's complex global market.
             </p>
             <a
-              href="#"
+              href="supply-chain-management.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -787,7 +791,7 @@
               organization through customized training programs.
             </p>
             <a
-              href="#"
+              href="leadership-training.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -837,7 +841,7 @@
               employees regarding HIV/AIDS.
             </p>
             <a
-              href="#"
+              href="hiv-awareness.html"
               class="text-blue-600 font-medium inline-flex items-center"
               >Learn more
               <svg
@@ -860,7 +864,7 @@
 
         <div class="text-center mt-12">
           <a
-            href="#"
+            href="services.html"
             class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-[#0B2C4D] hover:bg-blue-700 btn-hover-effect"
           >
             View All Services
