--- a/test.html
+++ b/test.html
@@ -195,7 +195,8 @@
     <!-- Hero Section -->
     <section
       id="home"
-      class="pt-24 pb-16 md:pt-32 md:pb-24 bg-gradient-to-b from-white to-gray-100"
+      class="pt-24 pb-16 md:pt-32 md:pb-24 bg-cover bg-center"
+      style="background-image: url('https://images.unsplash.com/photo-1551836022-fca9330890ca?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="grid md:grid-cols-2 gap-12 items-center">
@@ -906,7 +907,7 @@
     </section>
 
     <!-- Newsletter Section -->
-    <section class="py-12 bg-gray-100">
+    <section class="py-12 bg-gray-900">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="bg-white rounded-xl shadow-md p-8 md:p-12">
           <div class="grid md:grid-cols-2 gap-8 items-center">
