--- a/test.html
+++ b/test.html
@@ -84,6 +84,8 @@
         width: 6px;
         background-color: #002b5b;
         margin-right: 4px;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
       }
       .logo-bar-middle {
         height: 28px;
@@ -96,10 +98,21 @@
             rgba(0, 43, 91, 0.8),
             rgba(0, 43, 91, 0.8)
           ),
-          url("https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80");
+          url("https://images.unsplash.com/photo-1593508512255-86ab42a8e620?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+      }
+      @media (max-width: 640px) {
+        .hero-buttons {
+          flex-direction: column;
+          gap: 0.75rem;
+        }
+        .hero-button {
+          padding: 0.5rem 1rem;
+          font-size: 0.875rem;
+          border-radius: 9999px;
+        }
       }
     </style>
   </head>
@@ -221,15 +234,15 @@
               to optimize operations, reduce costs, and gain competitive
               advantage in the digital age.
             </p>
-            <div class="flex flex-col sm:flex-row gap-4">
+            <div class="flex flex-col sm:flex-row gap-4 hero-buttons">
               <a
                 href="#contact"
-                class="bg-white text-primary font-medium py-3 px-6 rounded-md hover:bg-opacity-90 transition shadow-md"
+                class="bg-white text-primary font-medium py-2 px-4 md:py-3 md:px-6 rounded-full md:rounded-md hover:bg-opacity-90 transition shadow-md hero-button"
                 >Contact Our Team</a
               >
               <a
                 href="#services"
-                class="border border-white text-white hover:bg-white hover:bg-opacity-10 font-medium py-3 px-6 rounded-md transition"
+                class="border border-white text-white hover:bg-white hover:bg-opacity-10 font-medium py-2 px-4 md:py-3 md:px-6 rounded-full md:rounded-md transition hero-button"
                 >Explore Services</a
               >
             </div>
@@ -237,7 +250,7 @@
           <div class="animate-float hidden md:block">
             <div class="glass-card p-6 rounded-2xl shadow-xl">
               <img
-                src="https://images.unsplash.com/photo-1677442135136-760c813a743e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80"
+                src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80"
                 alt="AI Consulting"
                 class="rounded-lg shadow-md"
               />
@@ -287,7 +300,7 @@
           </p>
         </div>
 
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-8">
           <!-- Service 1 -->
           <div
             class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
@@ -341,47 +354,6 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                   stroke-width="2"
-                  d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
-                ></path>
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-heading font-semibold text-primary mb-3">
-              Process Automation
-            </h3>
-            <p class="text-gray-600 mb-4">
-              Identify and implement high-impact automation opportunities across
-              your business processes.
-            </p>
-            <span
-              class="inline-block bg-primary bg-opacity-10 text-primary text-sm font-medium px-3 py-1 rounded-full"
-              >Available Now</span
-            >
-          </div>
-
-          <!-- Service 3 -->
-          <div
-            class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
-          >
-            <div
-              class="w-12 h-12 bg-primary bg-opacity-10 rounded-lg flex items-center justify-center mb-4"
-            >
-              <svg
-                class="w-6 h-6 text-primary"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
                   d="M13 10V3L4 14h7v7l9-11h-7z"
                 ></path>
               </svg>
@@ -399,77 +371,7 @@
             >
           </div>
 
-          <!-- Service 4 -->
-          <div
-            class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
-          >
-            <div
-              class="w-12 h-12 bg-primary bg-opacity-10 rounded-lg flex items-center justify-center mb-4"
-            >
-              <svg
-                class="w-6 h-6 text-primary"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-heading font-semibold text-primary mb-3">
-              AI Security Solutions
-            </h3>
-            <p class="text-gray-600 mb-4">
-              Protect your digital assets with AI-powered threat detection and
-              prevention systems.
-            </p>
-            <span
-              class="inline-block bg-primary bg-opacity-10 text-primary text-sm font-medium px-3 py-1 rounded-full"
-              >Coming Soon</span
-            >
-          </div>
-
-          <!-- Service 5 -->
-          <div
-            class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
-          >
-            <div
-              class="w-12 h-12 bg-primary bg-opacity-10 rounded-lg flex items-center justify-center mb-4"
-            >
-              <svg
-                class="w-6 h-6 text-primary"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
-                ></path>
-              </svg>
-            </div>
-            <h3 class="text-xl font-heading font-semibold text-primary mb-3">
-              Customer Intelligence
-            </h3>
-            <p class="text-gray-600 mb-4">
-              AI-driven insights into customer preferences, behavior patterns,
-              and lifetime value.
-            </p>
-            <span
-              class="inline-block bg-primary bg-opacity-10 text-primary text-sm font-medium px-3 py-1 rounded-full"
-              >Coming Soon</span
-            >
-          </div>
-
-          <!-- Service 6 -->
+          <!-- Service 3 -->
           <div
             class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
           >
@@ -497,6 +399,41 @@
             <p class="text-gray-600 mb-4">
               Machine learning models to predict demand, optimize inventory, and
               streamline logistics.
+            </p>
+            <span
+              class="inline-block bg-primary bg-opacity-10 text-primary text-sm font-medium px-3 py-1 rounded-full"
+              >Coming Soon</span
+            >
+          </div>
+
+          <!-- Service 4 -->
+          <div
+            class="bg-gray-50 rounded-xl p-6 border border-gray-200 hover:shadow-lg transition"
+          >
+            <div
+              class="w-12 h-12 bg-primary bg-opacity-10 rounded-lg flex items-center justify-center mb-4"
+            >
+              <svg
+                class="w-6 h-6 text-primary"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-heading font-semibold text-primary mb-3">
+              SME & SACCO Fraud Detection
+            </h3>
+            <p class="text-gray-600 mb-4">
+              AI-powered systems to identify and prevent fraudulent activities
+              in small businesses and savings cooperatives.
             </p>
             <span
               class="inline-block bg-primary bg-opacity-10 text-primary text-sm font-medium px-3 py-1 rounded-full"
@@ -978,17 +915,17 @@
               </li>
               <li>
                 <a href="#" class="text-gray-400 hover:text-white transition"
-                  >Process Automation</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-gray-400 hover:text-white transition"
                   >Predictive Analytics</a
                 >
               </li>
               <li>
                 <a href="#" class="text-gray-400 hover:text-white transition"
-                  >AI Security Solutions</a
+                  >Supply Chain Optimization</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-gray-400 hover:text-white transition"
+                  >SME & SACCO Fraud Detection</a
                 >
               </li>
             </ul>
