--- a/test.html
+++ b/test.html
@@ -87,7 +87,7 @@
             rgba(0, 43, 91, 0.85),
             rgba(0, 43, 91, 0.85)
           ),
-          url("https://images.unsplash.com/photo-1593508512255-86ab42a8e620?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80");
+          url("https://images.unsplash.com/photo-1591488320449-011701bb6704?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -113,15 +113,14 @@
           border-radius: 0.375rem;
           width: 100%;
         }
-      }
-      .footer-link::after {
-        content: "•";
-        margin: 0 0.5rem;
-        color: #9ca3af;
-      }
-      .footer-link:last-child::after {
-        content: "";
-        margin: 0;
+        .footer-links {
+          flex-wrap: wrap;
+          gap: 0.5rem;
+        }
+        .footer-link::after {
+          content: "";
+          margin: 0;
+        }
       }
     </style>
   </head>
@@ -157,11 +156,6 @@
               href="#about"
               class="text-primary hover:text-secondary font-medium transition"
               >About</a
-            >
-            <a
-              href="#blog"
-              class="text-primary hover:text-secondary font-medium transition"
-              >Blog</a
             >
             <a
               href="#contact"
@@ -215,11 +209,6 @@
             >About</a
           >
           <a
-            href="#blog"
-            class="block px-3 py-2 rounded-md text-base font-medium text-primary hover:bg-gray-100"
-            >Blog</a
-          >
-          <a
             href="#contact"
             class="block px-3 py-2 rounded-md text-base font-medium bg-primary text-white hover:bg-opacity-90"
             >Contact Us</a
@@ -228,7 +217,7 @@
       </div>
     </nav>
 
-    <!-- Hero Section with Background Image -->
+    <!-- Hero Section with GPU Background Image -->
     <section
       id="home"
       class="hero-section pt-24 pb-16 md:pt-32 md:pb-24 text-white"
@@ -515,178 +504,6 @@
       </div>
     </section>
 
-    <!-- Blog Section with compelling images -->
-    <section id="blog" class="py-16 bg-white">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="text-center mb-12">
-          <span class="text-secondary font-medium">LATEST INSIGHTS</span>
-          <h2
-            class="text-3xl md:text-4xl font-heading font-bold text-primary mt-2 mb-4"
-          >
-            AI Trends & Updates
-          </h2>
-          <p class="max-w-2xl mx-auto text-gray-600">
-            Stay informed with the latest developments in artificial
-            intelligence and digital transformation.
-          </p>
-        </div>
-
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Article 1 -->
-          <div
-            class="bg-gray-50 rounded-xl overflow-hidden border border-gray-200 hover:shadow-lg transition"
-          >
-            <img
-              src="https://images.unsplash.com/photo-1677442135136-760c813a743e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80"
-              alt="AI Trends"
-              class="w-full h-48 object-cover"
-            />
-            <div class="p-6">
-              <span class="text-sm text-gray-500">June 15, 2023</span>
-              <h3
-                class="text-xl font-heading font-semibold text-primary mt-2 mb-3"
-              >
-                Generative AI Revolutionizes Content Creation
-              </h3>
-              <p class="text-gray-600 mb-4">
-                How AI models like GPT-4 are transforming marketing, design, and
-                media production across industries.
-              </p>
-              <a
-                href="#"
-                class="text-primary font-medium hover:text-secondary inline-flex items-center"
-              >
-                Read more
-                <svg
-                  class="w-4 h-4 ml-1"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 5l7 7-7 7"
-                  ></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-
-          <!-- Article 2 -->
-          <div
-            class="bg-gray-50 rounded-xl overflow-hidden border border-gray-200 hover:shadow-lg transition"
-          >
-            <img
-              src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80"
-              alt="AI Implementation"
-              class="w-full h-48 object-cover"
-            />
-            <div class="p-6">
-              <span class="text-sm text-gray-500">May 28, 2023</span>
-              <h3
-                class="text-xl font-heading font-semibold text-primary mt-2 mb-3"
-              >
-                The Rise of AI-Powered Cybersecurity
-              </h3>
-              <p class="text-gray-600 mb-4">
-                How machine learning is becoming the frontline defense against
-                sophisticated cyber threats.
-              </p>
-              <a
-                href="#"
-                class="text-primary font-medium hover:text-secondary inline-flex items-center"
-              >
-                Read more
-                <svg
-                  class="w-4 h-4 ml-1"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 5l7 7-7 7"
-                  ></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-
-          <!-- Article 3 -->
-          <div
-            class="bg-gray-50 rounded-xl overflow-hidden border border-gray-200 hover:shadow-lg transition"
-          >
-            <img
-              src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80"
-              alt="AI Ethics"
-              class="w-full h-48 object-cover"
-            />
-            <div class="p-6">
-              <span class="text-sm text-gray-500">April 10, 2023</span>
-              <h3
-                class="text-xl font-heading font-semibold text-primary mt-2 mb-3"
-              >
-                AI in Financial Services: The 2023 Landscape
-              </h3>
-              <p class="text-gray-600 mb-4">
-                From algorithmic trading to fraud detection, how AI is reshaping
-                the finance industry.
-              </p>
-              <a
-                href="#"
-                class="text-primary font-medium hover:text-secondary inline-flex items-center"
-              >
-                Read more
-                <svg
-                  class="w-4 h-4 ml-1"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 5l7 7-7 7"
-                  ></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="text-center mt-12">
-          <a
-            href="#"
-            class="inline-flex items-center text-primary font-medium hover:text-secondary"
-          >
-            View all articles
-            <svg
-              class="w-4 h-4 ml-2"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 5l7 7-7 7"
-              ></path>
-            </svg>
-          </a>
-        </div>
-      </div>
-    </section>
-
     <!-- CTA Section -->
     <section class="py-16 bg-primary text-white">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
@@ -740,7 +557,7 @@
                   </svg>
                 </div>
                 <div class="ml-3">
-                  <p class="text-gray-700">contact@esalventures.com</p>
+                  <p class="text-gray-700">esalventuresltd@gmail.com</p>
                 </div>
               </div>
 
@@ -762,7 +579,7 @@
                   </svg>
                 </div>
                 <div class="ml-3">
-                  <p class="text-gray-700">+1 (555) 123-4567</p>
+                  <p class="text-gray-700">+254-719-123-4567</p>
                 </div>
               </div>
 
@@ -791,7 +608,7 @@
                 </div>
                 <div class="ml-3">
                   <p class="text-gray-700">
-                    123 AI Boulevard, Suite 500<br />San Francisco, CA 94107
+                    Britam Tower, Hospital Road, Upper Hill<br />Nairobi, Kenya
                   </p>
                 </div>
               </div>
@@ -949,13 +766,6 @@
               </li>
               <li>
                 <a
-                  href="#blog"
-                  class="text-gray-400 hover:text-white transition"
-                  >Blog</a
-                >
-              </li>
-              <li>
-                <a
                   href="#contact"
                   class="text-gray-400 hover:text-white transition"
                   >Contact</a
@@ -972,7 +782,12 @@
           <div>
             <h3 class="text-lg font-medium mb-4">Connect</h3>
             <div class="flex space-x-4">
-              <a href="#" class="text-gray-400 hover:text-white transition">
+              <a
+                href="https://www.facebook.com/"
+                class="text-gray-400 hover:text-white transition"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
@@ -984,7 +799,12 @@
                   ></path>
                 </svg>
               </a>
-              <a href="#" class="text-gray-400 hover:text-white transition">
+              <a
+                href="https://x.com/MoDaniels19324"
+                class="text-gray-400 hover:text-white transition"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
@@ -996,7 +816,12 @@
                   ></path>
                 </svg>
               </a>
-              <a href="#" class="text-gray-400 hover:text-white transition">
+              <a
+                href="https://www.linkedin.com/in/esalventures/"
+                class="text-gray-400 hover:text-white transition"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
@@ -1015,19 +840,17 @@
         <div class="border-t border-gray-800 mt-12 pt-8">
           <div class="flex flex-col md:flex-row justify-between items-center">
             <p class="text-gray-400 mb-4 md:mb-0">
-              &copy; 2023 Esal Ventures. All rights reserved.
+              &copy; 2025 Esal Ventures. All rights reserved.
             </p>
-            <div class="flex items-center">
-              <a
-                href="#"
-                class="text-gray-400 hover:text-white transition footer-link"
+            <div class="flex items-center footer-links">
+              <a href="#" class="text-gray-400 hover:text-white transition"
                 >Privacy Policy</a
               >
-              <a
-                href="#"
-                class="text-gray-400 hover:text-white transition footer-link"
+              <span class="text-gray-500 mx-2">•</span>
+              <a href="#" class="text-gray-400 hover:text-white transition"
                 >Terms of Service</a
               >
+              <span class="text-gray-500 mx-2">•</span>
               <a href="#" class="text-gray-400 hover:text-white transition"
                 >Cookie Policy</a
               >
