--- a/esalwebsite.html
+++ b/esalwebsite.html
@@ -564,7 +564,7 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0">
                   <svg
-                    class="w-6 h-6 text-primary"
+                    class="w-6 w-6 text-primary"
                     fill="none"
                     stroke="currentColor"
                     viewBox="0 0 24 24"
@@ -617,25 +617,31 @@
 
           <div>
             <form
+              id="contactForm"
               class="bg-white p-6 rounded-xl shadow-md border border-gray-200"
             >
+              <div id="formMessage" class="hidden mb-4 p-4 rounded-md"></div>
               <div class="mb-4">
                 <label for="name" class="block text-gray-700 font-medium mb-2"
-                  >Full Name</label
+                  >Full Name *</label
                 >
                 <input
                   type="text"
                   id="name"
+                  name="name"
+                  required
                   class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                 />
               </div>
               <div class="mb-4">
                 <label for="email" class="block text-gray-700 font-medium mb-2"
-                  >Email Address</label
+                  >Email Address *</label
                 >
                 <input
                   type="email"
                   id="email"
+                  name="email"
+                  required
                   class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                 />
               </div>
@@ -648,6 +654,7 @@
                 <input
                   type="text"
                   id="company"
+                  name="company"
                   class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                 />
               </div>
@@ -655,19 +662,42 @@
                 <label
                   for="message"
                   class="block text-gray-700 font-medium mb-2"
-                  >How Can We Help?</label
+                  >How Can We Help? *</label
                 >
                 <textarea
                   id="message"
+                  name="message"
                   rows="4"
+                  required
                   class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                 ></textarea>
               </div>
               <button
                 type="submit"
-                class="w-full bg-primary text-white font-medium py-3 px-4 rounded-md hover:bg-opacity-90 transition"
+                class="w-full bg-primary text-white font-medium py-3 px-4 rounded-md hover:bg-opacity-90 transition flex justify-center items-center"
               >
-                Send Message
+                <span id="submitText">Send Message</span>
+                <svg
+                  id="submitSpinner"
+                  class="hidden w-5 h-5 ml-2 text-white animate-spin"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <circle
+                    class="opacity-25"
+                    cx="12"
+                    cy="12"
+                    r="10"
+                    stroke="currentColor"
+                    stroke-width="4"
+                  ></circle>
+                  <path
+                    class="opacity-75"
+                    fill="currentColor"
+                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                  ></path>
+                </svg>
               </button>
             </form>
           </div>
@@ -902,6 +932,75 @@
       document.querySelectorAll("section").forEach((section) => {
         observer.observe(section);
       });
+
+      // Contact form handling
+      document
+        .getElementById("contactForm")
+        ?.addEventListener("submit", async function (e) {
+          e.preventDefault();
+
+          const form = e.target;
+          const formData = new FormData(form);
+          const submitButton = form.querySelector('button[type="submit"]');
+          const submitText = document.getElementById("submitText");
+          const submitSpinner = document.getElementById("submitSpinner");
+          const formMessage = document.getElementById("formMessage");
+
+          try {
+            // Show loading state
+            submitButton.disabled = true;
+            submitText.textContent = "Sending...";
+            submitSpinner.classList.remove("hidden");
+            formMessage.classList.add("hidden");
+
+            // Simulate form submission (replace with actual API call)
+            await new Promise((resolve) => setTimeout(resolve, 1500));
+
+            // Show success message
+            formMessage.textContent =
+              "Thank you! Your message has been sent. We will get back to you soon.";
+            formMessage.classList.remove(
+              "hidden",
+              "bg-red-100",
+              "text-red-700"
+            );
+            formMessage.classList.add("bg-green-100", "text-green-700");
+
+            // Reset form
+            form.reset();
+          } catch (error) {
+            // Show error message
+            formMessage.textContent =
+              "There was an error sending your message. Please try again later.";
+            formMessage.classList.remove(
+              "hidden",
+              "bg-green-100",
+              "text-green-700"
+            );
+            formMessage.classList.add("bg-red-100", "text-red-700");
+          } finally {
+            // Reset button state
+            submitButton.disabled = false;
+            submitText.textContent = "Send Message";
+            submitSpinner.classList.add("hidden");
+
+            // Scroll to message
+            formMessage.scrollIntoView({
+              behavior: "smooth",
+              block: "nearest",
+            });
+          }
+        });
+
+      // Newsletter form handling (optional)
+      document
+        .querySelector(".newsletter-form")
+        ?.addEventListener("submit", function (e) {
+          e.preventDefault();
+          const emailInput = this.querySelector('input[type="email"]');
+          alert(`Thank you for subscribing with ${emailInput.value}!`);
+          emailInput.value = "";
+        });
     </script>
   </body>
 </html>
